--- a/src/assets/styles/Vars.scss
+++ b/src/assets/styles/Vars.scss
@@ -1,1 +1,4 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap);
+
+$theme-font: 'Roboto', sans-serif;
 $main-color: #f0f0f0;
